# circinus

./: .clang-format  .gitignore  .style.yapf  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: dep.cmake
exp_results_in_paper/: plot.py  plot.sh  process_log.py
exp_results_in_paper/exp/: unlabeled_queries.drawio
exp_results_in_paper/exp/data/: unlabeled_time.csv
exp_results_in_paper/exp/data/cardinality_sensitivity/: batch_friendster_12_cfl_cfl_10_dynamic_cc_32_path_card_false_count  batch_friendster_12_cfl_cfl_10_dynamic_cc_32_path_card_true_count  batch_friendster_12_gql_gql_10_dynamic_cc_32_path_card_false_count  batch_friendster_12_gql_gql_10_dynamic_cc_32_path_card_true_count  batch_friendster_8_cfl_cfl_10_dynamic_cc_32_path_card_false_count  batch_friendster_8_cfl_cfl_10_dynamic_cc_32_path_card_true_count  batch_friendster_8_gql_gql_10_dynamic_cc_32_path_card_false_count  batch_friendster_8_gql_gql_10_dynamic_cc_32_path_card_true_count  batch_human_12_cfl_cfl_3_dynamic_cc_32_path_card_false_count  batch_human_12_cfl_cfl_3_dynamic_cc_32_path_card_true_count  batch_human_12_gql_gql_3_dynamic_cc_32_path_card_false_count  batch_human_12_gql_gql_3_dynamic_cc_32_path_card_true_count  (+20 more)
scripts/: analyze.py  circinus_client.py  circinus_cost_learner.py  clang-format.py  duplication_checker.sh  install_bliss.sh  lint.py  run_benchmark.py  run_log.sh
scripts/exp_scripts/: add_n_intersection.py  run_all_exps.sh  run_cardinality_sensitive.sh  run_friendster_redundancy_reduction.sh  run_human_single.sh  run_orkut_multi.sh  run_orkut_redundancy_reduction.sh  run_parallelization.sh  run_unlabeld.sh  run_vc_influence.sh  run_youtube_multi.sh  run_youtube_redundancy_reduction.sh  run_youtube_single.sh
src/: CMakeLists.txt  circinus.cc  circinus_main.cc
src/algorithms/: automorphism_check.cc  automorphism_check.h  centrality.h  intersect.h  k_clique.h  k_core.cc  k_core.h  k_core_unittest.cc  k_cycle.h  k_star.h  leapfrog_join.cc  leapfrog_join.h  minimum_weight_vertex_cover.cc  minimum_weight_vertex_cover.h  partial_order.cc  partial_order.h  search.h  vertex_cover.cc  vertex_cover.h  vertex_equivalence.cc  vertex_equivalence.h
src/exec/: bipartite_graph_traverse_task.h  candidate_pruning_plan_driver.cc  candidate_pruning_plan_driver.h  circinus_server.cc  circinus_server.h  execution_config.h  execution_plan_driver.cc  execution_plan_driver.h  executor_manager.cc  executor_manager.h  executor_to_cost_learner_client.h  filter_task.h  plan_driver.h  profile_task.h  result.cc  result.h  scan_task.h  task.h  task_queue.h  thread_pool.h  threadsafe_queue.h  traverse_task.cc  traverse_task.h
src/graph/: bipartite_graph.h  candidate_set_view.cc  candidate_set_view.h  candidate_set_view_unittest.cc  compressed_subgraphs.cc  compressed_subgraphs.h  graph.cc  graph.h  graph_base.cc  graph_base.h  graph_metadata.h  graph_partition.cc  graph_partition.h  graph_unittest.cc  graph_view.h  partitioned_graph.cc  partitioned_graph.h  partitioned_graph_unittest.cc  query_graph.cc  query_graph.h  query_neighbor_set.h  tree_node.h  types.h  vertex_set.h  vertex_set_view.h
src/ops/: FilterAndOrder.h  enumerate_key_expand_to_set_operator.cc  enumerate_key_expand_to_set_operator.h  enumerate_key_operator.h  expand_edge_operator.cc  expand_edge_operator.h  expand_into_operator.h  expand_into_set_operator.h  expand_key_key_vertex_operator.h  expand_key_to_key_vertex_operator.h  expand_key_to_set_vertex_operator.h  expand_set_to_key_vertex_operator.cc  expand_set_to_key_vertex_operator.h  expand_set_vertex_operator.h  expand_vertex_operator.cc  expand_vertex_operator.h  expand_vertex_traverse_context.h  extender.h  filter_and_order.h  filters.h  input_operator.cc  input_operator.h  logical_filters.h  operator.h  operators.h  order.h  order_generator.h  output_operator.cc  output_operator.h  scans.cc  scans.h  split_set_operator.h  stateful_filter_and_order.h  stateless_filter_and_order.h  traverse_context.h  traverse_operator.cc  traverse_operator.h  traverse_operator_unittest.cc  traverse_operator_utils.h  types.h
src/ops/filters/: ceci_filter.cc  ceci_filter.h  cfl_filter.cc  cfl_filter.h  dpiso_filter.cc  dpiso_filter.h  filter.cc  filter.h  filter_base.h  gql_filter.cc  gql_filter.h  local_filter.h  nlf_filter.cc  nlf_filter.h  subgraph_filter.cc  subgraph_filter.h  target_filter.cc  target_filter.h  tso_filter.cc  tso_filter.h
src/ops/filters/tmp/: logical_cfl_filter.h  logical_dpiso_filter.h  logical_tso_filter.h
src/ops/logical/: compressed_input.cc  compressed_input.h
src/ops/logical/filter/: cfl_filter.cc  cfl_filter.h  daf_filter.cc  daf_filter.h  dpiso_filter.cc  dpiso_filter.h  filter.h  gql_filter.cc  gql_filter.h  nlf_filter.cc  nlf_filter.h  tso_filter.cc  tso_filter.h
src/ops/logical/scan/: ldf_scan.cc  ldf_scan.h
src/ops/order/: ceci_order.cc  ceci_order.h  cfl_order.cc  cfl_order.h  dpiso_order.h  order_base.h  tso_order.cc  tso_order.h
src/ops/scans/: ldf_scan.cc  ldf_scan.h
src/plan/: backtracking_plan.h  candidate_pruning_plan.h  execution_plan.cc  execution_plan.h  naive_planner.cc  naive_planner.h  operator_tree.cc  operator_tree.h  planner.cc  planner.h  vertex_relationship.cc  vertex_relationship.h
src/tools/: break_symmetry.cc  graph_change_bits.cc  graph_partition_analysis.cc  graph_to_binary_main.cc  graph_to_snap_format.cc  query_topology_check.cc
src/utils/: file_utils.h  flags.cc  flags.h  hashmap.h  network_utils.cc  network_utils.h  print_styles.h  profiler.h  query_utils.h  thread_affinity.h  utils.h
tests/: CMakeLists.txt  benchmark.cc  benchmark1.cc  dynamic_cover_preliminary.cc  has_filesystem.cc  naive_match.cc  print_execution_plan.cc  query_graph_generator.cc  test_expand_edge_costs.cc  test_filter_and_mwvc.cc  test_filter_and_order.cc  test_filter_candidates.cc  test_metis.cc  test_minimum_weight_vertex_cover_algorithm.cc  test_print_style.cc  test_subgraph_matching.cc  test_vertex_cover_algorithm.cc  unittest_main.cc
tests/resources/: human.graph  test_filter_answer.txt  test_vertex_cover3.graph
(+92 files in other folders)
